# log_parser

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
log_parser/: asgi.py  settings.py  urls.py  wsgi.py
log_parser/logs/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
log_parser/logs/management/commands/: parse_log.py
log_parser/logs/migrations/: 0001_initial.py
log_parser/logs/test_data/: nginx_logs.txt
